--- a/styles/global.css
+++ b/styles/global.css
@@ -32,6 +32,9 @@
   --fs-xl: 1.5rem;
   --fs-2xl: 2.5rem;
 
+  --py-base: 1rem;
+  --py-lg: 1.5rem;
+  --py-xl: 3rem;
   --px-lg: 1.5rem
 }
 
@@ -81,5 +84,10 @@ ul[role="list"]{
     --fs-xl: 3rem;
     --fs-2xl: 4rem;
     --px-lg: 2rem;
+
+    --py-base: 1.5rem;
+    --py-lg: 2.5rem;
+    --py-xl: 5rem;
+    --px-lg: 2rem
   }
 }
